--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.91",
     "@mui/material": "^5.9.1",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "next": "12.2.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
-    "@reduxjs/toolkit": "^1.8.3",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
