--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.9.1",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "cloudinary": "^1.31.0",
     "next": "12.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
