--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.91",
     "@mui/material": "^5.9.1",
+    "@mui/x-date-pickers": "^5.0.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "cloudinary": "^1.31.0",
+    "dayjs": "^1.11.5",
     "next": "12.2.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
